--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "samling",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Serverless SAML testing",
   "author": "Capriza Inc. <backend@capriza.com>",
   "maintainers": [
     "Nadav Fischer <nadav.fischer@capriza.com>",
-    "Yuval Carmel <yuval.carmel@capriza.com>"
+    "Yuval Carmel <yuval.carmel@capriza.com>",
+    "David Barrat <david@barrat.io>"
   ],
   "homepage": "http://github.com/capriza/samling",
   "repository": {
@@ -37,9 +38,9 @@
     "prepare": "mkdir -p public/js",
     "bootstrap": "cp -r node_modules/bootstrap/dist/* public/",
     "jquery": "cp -r node_modules/jquery/dist/* public/js/",
-    "forge": "cd node_modules/node-forge && npm install && npm run bundle && cp js/forge.bundle.js ../../public",
+    "forge": "cd node_modules/node-forge && npm install && yarn bundle && cp js/forge.bundle.js ../../public",
     "browser": "browserify -g brfs samling.js | sed \"s/require[(]'node-forge'[)]/window.forge/g\" > public/bundle.js",
-    "build": "npm run prepare && npm run bootstrap && npm run jquery && npm run forge && npm run browser",
+    "build": "yarn prepare && yarn bootstrap && yarn jquery && yarn forge && yarn browser",
     "serve": "http-server -p 8888 ."
   },
   "license": "MIT"
